--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1139,7 +1139,7 @@ button {
     overflow: hidden;
   }
   figcaption {
-    width: 300px;
+    width: 55%;
     @include margin(10px auto);
   }
   .quantity {
