--- a/views/content/aboutus.html
+++ b/views/content/aboutus.html
@@ -8,7 +8,7 @@
     <div class="about-desc get-up brand-brown-bg white health-descp relate">
       <h3 class="text-uppercase font-semibold">What is health design</h3>
       <p class="health-style font-baubodi">Only the fit know how fabulous it feels.</p>
-      <p>At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness expert, each nutrition plan is orchestrated to fit individualized needs without compromising on lifestyle. At Selfcare health overrides weight loss.</p>
+      <p class="health-descp">At Selfcare a team of experts create designer diets to balance out a body-system that rights itself to suit your needs—be it weight loss, the need to circumvent aging, evade arthritis, diabetes or hypertension. Under the expert and experienced guidance of nutritionist Suman Agarwal , a qualified clinical nutritionist as well as a fitness expert, each nutrition plan is orchestrated to fit individualized needs without compromising on lifestyle. At Selfcare health overrides weight loss.</p>
     </div>
   </div>
 
@@ -21,12 +21,14 @@
             <div class="embed-youtube">
               <!-- Youtube video -->
               <!-- <iframe width="100%" height="300" src="https://www.youtube.com/embed/nSQJuONAvaw" frameborder="0" allowfullscreen></iframe> -->
-              <a class="various fancybox.iframe" fancybox href="https://www.youtube.com/embed/nSQJuONAvaw?autoplay=1">
-                <img src="http://img.youtube.com/vi/nSQJuONAvaw/sddefault.jpg" alt="" class="img-responsive" />
-                <div class="circle">
-                  <img src="img/play.png" alt="" class="img-responsive" />
-                </div>
-              </a>
+              <div class="story-video">
+                <a class="various fancybox.iframe" fancybox href="https://www.youtube.com/embed/nSQJuONAvaw?autoplay=1">
+                  <img src="http://img.youtube.com/vi/nSQJuONAvaw/sddefault.jpg" alt="" class="img-responsive" />
+                  <div class="circle">
+                    <img src="img/play.png" alt="" class="img-responsive" />
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
           <div class="col-md-7 col-sm-12">
@@ -49,7 +51,7 @@
 
   <div class="what-we-do">
     <div class="container">
-      <h2 class="text-uppercase text-center brand-brown-dark font-semibold">This is what we are also doing:</h2>
+      <h2 class="text-uppercase text-center brand-brown-dark font-semibold doing">This is what we are also doing:</h2>
       <p class="text-center">As the industry experts in diet, health and food management, this is what we have already consulted on:</p>
       <div class="row">
 
