--- a/sass/main.scss
+++ b/sass/main.scss
@@ -52,7 +52,7 @@ $brand-primary-lighter: #ffd8ce !default; //ligherOrange
 $brand-brown: #c2a388 !default; //Brown
 $brand-brown-light: #e6d9ce !default; //BrownLight
 $brand-brown-dark: #3b1808 !default; //BrownDark
-$brand-brown-dark2: !default; //BrownDark2
+$brand-brown-dark2: #2d1205!default; //BrownDark2
 $brand-brown-gray: #998675 !default; //BrownGray
 $brand-yellow: #f2921d !default; //Yellow
 $brand-blue: #5184c5 !default; //Blue
