--- a/views/content/knowyourstats.html
+++ b/views/content/knowyourstats.html
@@ -17,34 +17,40 @@
               <div class="calorie-detail">
                 <div class="choose-prd">
                   <div class="row">
-                    <div class="col-md-5">
-                      <span class="text-uppercase inline-block">Choose a food group :</span>
-                      <select class="">
-                        <option></option>
-                      </select>
+                    <div class="col-md-5 col-sm-5">
+                      <div class="text-center">
+                        <span class="text-uppercase inline-block">Choose a food group :</span>
+                        <select class="">
+                          <option></option>
+                        </select>
+                      </div>
                     </div>
-                    <div class="col-md-5">
-                      <span class="text-uppercase inline-block">Pick a product :</span>
-                      <select class="">
-                        <option></option>
-                      </select>
+                    <div class="col-md-5 col-sm-5">
+                      <div class="text-center">
+                        <span class="text-uppercase inline-block">Pick a product :</span>
+                        <select class="">
+                          <option></option>
+                        </select>
+                      </div>
                     </div>
-                    <div class="col-md-2">
-                      <a href="" class="text-uppercase white brand-primary-bg calorie-btn">Go</a>
+                    <div class="col-md-2 col-sm-2">
+                      <div class="text-center">
+                        <a href="" class="text-uppercase white brand-primary-bg calorie-btn">Go</a>
+                      </div>
                     </div>
                   </div>
                 </div>
                 <div class="result">
                   <div class="row">
                     <div class="col-md-5">
-                      <p class="burn">
-                        <span class="text-uppercase">Results</span>
-                        <i class="brand-primary">(for Lorem Ipsum product)</i>
-                      </p>
-                      <input class="result-number" type="text" placeholder="1">
-                      <span class="multiply"> x </span>
-                      <span>1 biscuit = 9 gm</span>
-                      <a href="" class="text-uppercase white brand-primary-bg calorie-btn">Go</a>
+                        <p class="burn">
+                          <span class="text-uppercase">Results</span>
+                          <i class="brand-primary">(for Lorem Ipsum product)</i>
+                        </p>
+                        <input class="result-number" type="text" placeholder="1">
+                        <span class="multiply"> x </span>
+                        <span>1 biscuit = 9 gm</span>
+                        <a href="" class="text-uppercase white brand-primary-bg calorie-btn">Go</a>
                     </div>
 
                     <div class="col-md-7">
@@ -58,14 +64,14 @@
                             </div>
                           </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-md-4 col-sm-6 col-xs-6">
                           <div class="nutrients inline-block">
                             <span class="block">Protein (gms)</span>
                             <span class="block">Fat (gms)</span>
                             <span class="block">Carbs (gms)</span>
                           </div>
                         </div>
-                        <div class="col-md-offset-1 col-md-3">
+                        <div class="col-md-offset-1 col-md-3 col-sm-6 col-xs-6">
                           <div class="nutrients-numbers inline-block text-right">
                             <span class="block">0.7</span>
                             <span class="block">2.1</span>
@@ -142,6 +148,9 @@
                   <select class="kgs text-uppercase">
                     <option>kgs</option>
                   </select>
+                </div>
+                <div class="bmi-cal">
+                  <a href="" class="btn btn-primary text-uppercase no-radius calorie-btn">calculate bmi</a>
                 </div>
               </div>
             </uib-accordion-group>
