--- a/views/content/recipes.html
+++ b/views/content/recipes.html
@@ -13,7 +13,7 @@
   <div class="recipes-main">
     <div class="container">
       <div class="row">
-        <div class="col-sm-6">
+        <div class="col-md-6">
           <div class="recipe-imgholder round">
             <img src="img/recipes/baingan.jpg" alt="">
           </div>
@@ -27,7 +27,7 @@
             </flex-slider>
           </div>
         </div>
-        <div class="col-sm-6">
+        <div class="col-md-6">
           <div class="recipes-detail">
             <h2 class="text-uppercase font-semibold brand-brown-dark">Baingan Bharta</h2>
             <span>Roasted brinjal lightly cooked with spring onion flavour</span>
