blog detail mobil

--- a/sass/_harsh.scss
+++ b/sass/_harsh.scss
@@ -883,3 +883,7 @@ $side-menu-width: 390px;
   }
 }
 .alert-dismissible .close { font-family: sans-serif; }
+
+// blogdetail
+.share-text, .story-prev { float: left; }
+.share-social, .story-next { float: right; }
