--- a/views/content/blogdetail.html
+++ b/views/content/blogdetail.html
@@ -6,7 +6,7 @@
   <div class="blog-detail blog-page">
     <div class="container">
       <div class="row">
-        <div class="col-md-8">
+        <div class="col-lg-8 col-md-12">
           <div class="check-blog">
             <div class="blog-postinfo">
               <div class="bloginfo-imgholder">
@@ -40,10 +40,10 @@
               </div>
             </div>
             <div class="share-story clearfix">
-              <div class="pull-left">
+              <div class="share-text">
                 <h3 class="text-uppercase brand-primary text-bold">share this story</h3>
               </div>
-              <div class="pull-right">
+              <div class="share-social">
                 <div class="social-info">
                   <span class='st_linkedin_vcount' displayText='LinkedIn'></span>
                   <span class='st_plusone_vcount' displayText='Google +1'></span>
@@ -53,25 +53,25 @@
               </div>
             </div>
             <div class="story-pagination clearfix">
-              <div class="pull-left">
+              <div class="story-prev">
                 <a href="" class="brand-primary">Previous Post</a>
                 <h4 class="brand-brown-dark text-uppercase m-clear">cranberry juice</h4>
               </div>
-              <div class="pull-right text-right">
+              <div class="story-next text-right">
                 <a href="" class="brand-primary">Next Post</a>
-                <h4 class="brand-brown-dark text-uppercase m-clear">Your questions ,answered</h4>
+                <h4 class="brand-brown-dark text-uppercase m-clear">Your questions, answered</h4>
               </div>
             </div>
             <div class="related-post">
               <h3 class="brand-brown-dark text-uppercase text-bold">related post</h3>
               <div class="row">
-                <div class="col-md-4">
+                <div class="col-sm-4 col-xs-12">
                   <div class="relatepost-holder"><img src="img/blog/post1.jpg" alt="" class="img-responsive"></div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4 col-xs-12">
                   <div class="relatepost-holder"><img src="img/blog/post3.jpg" alt="" class="img-responsive"></div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-sm-4 col-xs-12">
                   <div class="relatepost-holder"><img src="img/blog/post4.jpg" alt="" class="img-responsive"></div>
                 </div>
               </div>
@@ -81,10 +81,10 @@
               <p class="brand-primary">Your email address will not be published. Required fields are marked *</p>
               <form action="">
                 <div class="form-group">
-                  <input type="text" class="form-control" placeholder="Name *">
+                  <input type="text" class="form-control" placeholder="Name*">
                 </div>
                 <div class="form-group">
-                  <input type="email" class="form-control" placeholder="Email *">
+                  <input type="email" class="form-control" placeholder="Email*">
                 </div>
                 <div class="form-group">
                   <input type="text" class="form-control" placeholder="Website">
@@ -97,7 +97,7 @@
             </div>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4 col-md-12">
           <div class="get-inblog">
             <form action="">
               <div class="form-group">
